- Le informazioni di un piatto escono in popover con la descrizione in html
- Obbligatorietà campi per salvataggio Ordinazione
- Promise to Observable per le chiamate HTTP
- Fix Bug

=== Vers. 1.0.3 ===
- Fix bug in fase di creazione di un'ordinazione:
  nella cancellazione di un prodotto dal menu vengono cancellati più prodotti con lo stesso nome
- Icon e Splash
- Fix bug
- Modifica di tutte le call da GET a POST
- Modifica servizi PHP per ricervere request POST

=== Vers. 1.0.4 ===
- Struttura a TABS con "Comande" e "Menu"
- Eliminazione della "Login" e della "Home"
- Funzionalità "Refresh" nella pagina "Menu"
- Funzionalità "Add" nella pagina "Comande"
- Colore header "dark"
- Modifiche all'ordine solo se non è "completed"

=== Vers. 1.0.5 ===
- "Pull to refresh" nella pagina delle "Comande"
- Aggiunto plugin "cordova-plugin-network-information"
- Aggiornato "@ionic-native/core" alla versione "^3.8.0"
- Check Network: "add" e "refresh" non disponibile se offline
- Check Network: bottone nell'header per indicare se c'è connessione o meno con messaggio
- Fix bug "view note"
- Metodi "getOrders" "getOrderDelete" "getOrderNote" "getOrderNoteDelete" in GET
- Aggiunto url "192.168.1.100"
- Ottimizzazione per PROD (vedi main.ts) e "ionic build android --prod --release"

=== Vers. 1.0.6 ===
- Pipe per ordinamento lista "categorie" e "prodotti"

=== Vers. 1.0.7 ===
- Gestione "note" per singolo prodotto
- Fix bug

=== Vers. 1.0.8 ===
- Aggiunta dei bottoni "-" e "+" per la quantità di un piatto
- Nella cancellazione di un piatto in un ordine fatto viene decrementata la quantità se superiore a 1, altrimenti viene cancellato il piatto dall'ordine
- Legare "piatto" a "extra":
  nelle note dare la possibilità di aggiungere un "extra" (select) che viene scritto nella nota e viene aggiunto il prodotto extra per il totale
- Quando viene modificato un ordine e si torna alla lista delle ordinazioni, l'ultimo ordine modificato è evidenziato

=== Vers. 2.0.0 ===
- Nuovo BACKEND