@@ -18,3 +18,6 @@
 .item-md h2 {
     white-space: normal;
 }
+hr {
+    border-bottom: 1px solid #ddd;
+}
