@@ -19,6 +19,7 @@
       <!--
       <button *ngIf="ordine?.state != 'completed'" ion-fab (click)="addNote(ordine.id)"><ion-icon name="list"></ion-icon></button>
       -->
+      <button ion-fab (click)="changeOrderState(ordine.notes)"><ion-icon name="checkbox-outline"></ion-icon></button>
       <button ion-fab (click)="showNote(ordine.notes)"><ion-icon name="eye"></ion-icon></button>
       <button ion-fab (click)="deleteOrder(ordine.id)"><ion-icon name="trash"></ion-icon></button>
     </ion-fab-list>
@@ -55,8 +56,9 @@
     </ion-item>
 
     <ion-item *ngFor="let prod of ordine?.items">
-      <ion-icon *ngIf="ordine?.state != 'completed'" name="remove-circle" color="danger" item-left (click)="deleteProduct(prod.id,ordine.id)"></ion-icon>
-      <ion-icon *ngIf="ordine?.state == 'completed'" name="checkmark" color="secondary" item-left></ion-icon>
+      <ion-icon *ngIf="ordine?.state != 'completed' && prod.state != 'completed'" name="remove-circle" color="danger" item-left (click)="deleteProduct(prod.id,ordine.id)"></ion-icon>
+      <ion-icon *ngIf="ordine?.state != 'completed' && prod.state != 'completed'" name="checkbox-outline" color="dark" item-left (click)="changeItemState(prod.id,ordine.id)"></ion-icon>
+      <ion-icon *ngIf="ordine?.state == 'completed' || prod.state == 'completed'" name="checkmark" color="secondary" item-left></ion-icon>
       <h2>{{prod.quantity}} x {{prod.name}}</h2>
 
       <ion-card class="prodMetaCard" >
@@ -80,8 +82,9 @@
     </ion-item>
 
     <ion-item *ngFor="let special of ordine?.specials">
-      <ion-icon *ngIf="ordine?.state != 'completed'" name="remove-circle" color="danger" item-left (click)="deleteSpecial(special.id,ordine.id)"></ion-icon>
-      <ion-icon *ngIf="ordine?.state == 'completed'" name="checkmark" color="secondary" item-left></ion-icon>
+      <ion-icon *ngIf="ordine?.state != 'completed' && special.state != 'completed'" name="remove-circle" color="danger" item-left (click)="deleteSpecial(special.id,ordine.id)"></ion-icon>
+      <ion-icon *ngIf="ordine?.state != 'completed' && special.state != 'completed'" name="checkbox-outline" color="dark" item-left (click)="changeSpecialState(prod.id,ordine.id)"></ion-icon>
+      <ion-icon *ngIf="ordine?.state == 'completed' || special.state == 'completed'" name="checkmark" color="secondary" item-left></ion-icon>
       <h2>{{special.name}}</h2>
 
       <ion-card class="prodMetaCard" >
